--- a/css/app.css
+++ b/css/app.css
@@ -1,19 +1,21 @@
 body,
 html {
-  font-family: 'Source Code Pro', sans-serif;
-  font-weight: 400;
-  font-size: 12px;
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
   overflow: hidden;
 }
+body {
+  font-family: 'Helvetica Neue', Helvetica, Arial Geneva, sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+}
 #auto {
   width: 100%;
   height: 100%;
-  margin: -40px 0 -24px 0;
-  padding: 40px 0 24px 0;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -23,6 +25,10 @@ html {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
 }
 a {
   color: black;
@@ -82,6 +88,9 @@ a :visited {
 }
 .icon-edit-EEnumLiteral {
   background-position: -63px 0px;
+}
+.icon-edit-ESuperTypes {
+  background-position: -83px -23px;
 }
 
 #navigator {
@@ -220,4 +229,16 @@ a :visited {
   right: 15px;
   position: absolute;
   cursor: pointer;
+}
+
+#property-window {
+  min-width: 100px;
+  min-height: 20px;
+  top: 120px;
+  left: 600px;
+  z-index: 100;
+  background: white;
+}
+#property-window .hidden {
+  display: 'none';
 }
