--- a/src/less/app.less
+++ b/src/less/app.less
@@ -1,11 +1,8 @@
 @import "lib.less";
 
-@font: 'Source Code Pro', sans-serif;
+@font: 'Helvetica Neue', Helvetica, Arial Geneva, sans-serif;
 
 body, html {
-    font-family: @font;
-    font-weight: 400;
-    font-size: 12px;
     width: 100%;
     height: 100%;
     margin: 0;
@@ -13,10 +10,16 @@ body, html {
     overflow: hidden;
 }
 
+body {
+    font-family: @font;
+    font-weight: 400;
+    font-size: 12px;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+}
+
 #auto {
     .width-height;
-    margin: -40px 0 -24px 0;
-    padding: 40px 0 24px 0;
     .box-sizing;
     overflow: hidden;
 }
@@ -24,6 +27,10 @@ body, html {
 #contents {
     .width-height;
     overflow: hidden;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
 }
 
 a {
@@ -94,5 +101,9 @@ a :visited {
 
 .icon-edit-EEnumLiteral {
     background-position: -63px 0px;
+}
+
+.icon-edit-ESuperTypes {
+    background-position: -83px -23px;
 }
 
