--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -19,11 +19,27 @@ body {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  background: #333333;
   overflow: hidden;
+}
+#header {
+  height: 30px;
+}
+#footer {
+  position: absolute;
+  bottom: 0;
+  left: 0px;
+  height: 30px;
+  right: 0px;
+  background: #F5F5F5;
+  border-top: 1px solid #BEBEBE;
 }
 #contents {
   width: 100%;
-  height: 100%;
+  position: absolute;
+  top: 30px;
+  bottom: 30px;
+  background: white;
   overflow: hidden;
   -moz-user-select: none;
   -khtml-user-select: none;
@@ -46,74 +62,42 @@ a :visited {
   overflow: hidden;
 }
 #main {
-  left: 300px;
-  position: relative;
+  left: 280px;
+  top: 10px;
+  right: 0px;
+  position: absolute;
   overflow: hidden;
-  width: 100%;
-  height: 100%;
+  background: #FFF;
+  width: initial;
 }
-[class^="icon-edit-"],
-[class*=" icon-edit-"] {
-  background-position: left center;
-  padding-left: 4px;
-  width: 16px;
-  height: 16px;
-  display: inline-block;
-  vertical-align: text-bottom;
-  line-height: 14px;
-  background-repeat: no-repeat;
-  background-image: url('../img/ecore-icons.png');
-  background-position: 0px 20px;
+.nav-tabs {
+  margin-left: 10px;
 }
-.icon-edit-EPackage {
-  background-position: 0px 0px;
+.tab-content {
+  width: initial;
+  margin-left: 10px;
+  margin-right: 10px;
 }
-.icon-edit-EClass {
-  background-position: -21px 0px;
+input[type="checkbox"] {
+  margin: 0 6px 0 0;
 }
-.icon-edit-EDataType {
-  background-position: -83px 0px;
-}
-.icon-edit-EAttribute {
-  background-position: -62px -23px;
-}
-.icon-edit-EReference {
-  background-position: -39px -23px;
-}
-.icon-edit-EOperation {
-  background-position: -39px 0px;
-}
-.icon-edit-EEnum {
-  background-position: -21px -23px;
-}
-.icon-edit-EEnumLiteral {
-  background-position: -63px 0px;
-}
-.icon-edit-ESuperTypes {
-  background-position: -83px -23px;
-}
+
 
 #navigator {
   width: 280px;
-  top: 0;
-  bottom: 0;
-  position: absolute;
-  overflow: hidden;
-  background: #f5f5f5;
+  position: relative;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  background: #fbfbfb;
   color: #000000;
   -webkit-user-select: none;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-box-align: stretch;
-  display: -moz-box;
-  -moz-box-orient: vertical;
-  -moz-box-align: stretch;
-  -moz-box-shadow: inset 1px 0 2px rgba(0, 0, 0, 0.3);
-  -webkit-box-shadow: inset 1px 0 2px rgba(0, 0, 0, 0.3);
-  box-shadow: inset 1px 0 2px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.3);
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.3);
 }
 #navigator .nav-header {
-  height: 50px;
+  height: 30px;
 }
 #navigator .nav-header .nav-header-content {
   top: 10px;
@@ -138,9 +122,15 @@ a :visited {
   right: 0;
   cursor: pointer;
 }
+#navigator .nav-header .nav-header-content .icon-double-angle-left:hover {
+  color: green;
+}
 #navigator .nav-header .nav-header-content .icon-double-angle-right {
   right: 0;
   cursor: pointer;
+}
+#navigator .nav-header .nav-header-content .icon-double-angle-right:hover {
+  color: green;
 }
 #navigator .nav-box {
   overflow: hidden;
@@ -150,31 +140,24 @@ a :visited {
   padding: 2px;
 }
 #navigator .nav-box .nav-box-header {
+  margin: 4px 2px 6px 0px;
+  padding-left: 8px;
   line-height: 20px;
-  padding: 0 8px;
-  margin: 0;
-  background: #f1f1f1;
-  background: -webkit-gradient(linear, left top, left bottom, from(#f1f1f1), to(#dddddd));
-  background: -webkit-linear-gradient(top, #f1f1f1, #dddddd);
-  background: -moz-linear-gradient(top, #f1f1f1, #dddddd);
-  background: linear-gradient(top, #f1f1f1, #dddddd);
-  border-left: 1px solid #c6c6c6;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #c6c6c6;
   color: #777;
   text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.8);
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 11px;
+  font-size: 14px;
 }
 #navigator .nav-box .nav-row:hover {
-  background: #e1e1e1;
+  background: #FFEECC;
 }
 #navigator .nav-box .nav-row {
+  margin: 0px 8px 0px 8px;
   cursor: pointer;
   background: none;
   overflow: hidden;
-  padding: 4px;
+  padding: 2px 0px 2px 0px;
   height: 20px;
   position: relative;
 }
@@ -184,9 +167,33 @@ a :visited {
   text-overflow: ellipsis;
   overflow: hidden;
   display: block;
-  top: 4px;
+  top: 3px;
   left: 30px;
   position: absolute;
+}
+#navigator .nav-box .nav-row label {
+  left: 0;
+  padding-left: 4px;
+}
+#navigator .nav-box .nav-row div.text-property {
+  -moz-user-select: text;
+  -khtml-user-select: text;
+  -webkit-user-select: text;
+  user-select: text;
+  left: 0;
+  padding-left: 4px;
+  background: white;
+  border: 1px solid #C1D2E4;
+  min-height: 20px;
+}
+#navigator .nav-box .nav-row select {
+  height: 20px;
+  left: 0;
+  padding-left: 4px;
+  width: 100%;
+}
+#navigator .nav-box .nav-row .selected {
+  background: #FFEECC;
 }
 #navigator .nav-box .nav-row .icon-remove {
   position: absolute;
@@ -195,7 +202,7 @@ a :visited {
   display: block;
   width: 14px;
   height: 14px;
-  color: #696969;
+  color: #bebebe;
 }
 #navigator .nav-box .nav-row .icon-remove:hover {
   color: red;
@@ -207,16 +214,19 @@ a :visited {
   display: block;
   width: 14px;
   height: 14px;
-  color: #696969;
+  color: #bebebe;
 }
 #navigator .nav-box .nav-row .icon-sitemap:hover {
   color: blue;
 }
 #navigator .nav-box .nav-row .icon-plus {
-  color: #696969;
+  color: #bebebe;
 }
 #navigator .nav-box .nav-row .icon-plus:hover {
   color: green;
+}
+#navigator .nav-box .nav-row .icon-folder-close {
+  color: #bebebe;
 }
 .icon-double-angle-up {
   top: 5px;
@@ -224,11 +234,17 @@ a :visited {
   position: absolute;
   cursor: pointer;
 }
+.icon-double-angle-up:hover {
+  color: green;
+}
 .icon-double-angle-down {
   top: 5px;
   right: 15px;
   position: absolute;
   cursor: pointer;
+}
+.icon-double-angle-down:hover {
+  color: green;
 }
 
 #property-window {
